--- a/src/scss/components/_icon-button.scss
+++ b/src/scss/components/_icon-button.scss
@@ -13,7 +13,6 @@
         position: absolute;
         top: 50%;
         left: 50%;
-        z-index: -1;
         transform: translate(-50%, -50%) scale(0);
         width: 40px;
         height: 40px;
@@ -34,6 +33,8 @@
     }
 
     &__icon {
+        position: relative;
+        z-index: 100;
         width: 24px;
         height: 24px;
         fill: $black;
